change to window.NoahFace

--- a/src/index.html
+++ b/src/index.html
@@ -59,19 +59,19 @@
   <script>
     // This script can be used to simulate NoahFace data for testing purposes
     // Comment out or remove in production
-    if (typeof NoahFace === 'undefined') {
-      window.NoahFace = {
-        org: "Test Organization",
-        site: "Test Site",
-        firstname: "John",
-        lastname: "Doe",
-        temperature: "36.6",
-        elevated: "false",
-        type: "",
-        eventtime: new Date().toLocaleTimeString(),
-        details: ""
-      };
-    }
+    // if (typeof NoahFace === 'undefined') {
+    //   window.NoahFace = {
+    //     org: "Test Organization",
+    //     site: "Test Site",
+    //     firstname: "John",
+    //     lastname: "Doe",
+    //     temperature: "36.6",
+    //     elevated: "false",
+    //     type: "",
+    //     eventtime: new Date().toLocaleTimeString(),
+    //     details: ""
+    //   };
+    // }
   </script>
 
   <script>
