--- a/src/timecard.html
+++ b/src/timecard.html
@@ -57,9 +57,9 @@
     //   const urlParams = new URLSearchParams(window.location.search);
     //   return urlParams.get(param);
     // };
-    const API_URL = 'https://syncshift.smartplace.ai/sync/timecards';
     // const token = getQueryParam('token');
-    const token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjhkMzBkMWFiMWNmOTZmMjk4NDcyMjVjZWE3Yzc4NTY1NWIxMDUyOWNkYzU2NGY2MTNjOWE2ZGZlNjE1ZWUzY2EiLCJzaWduYXR1cmUiOiI4Mzk2Njg5NDZjNDRkNzJmYWM2ODNjODY5YzkxYzM3N2IwOTYzNTAxYTVmMDY4NTEwYjA5Mjc3MmNlYTllZWZlIiwiZXhwIjoxNzM4MTA4ODAwLCJpYXQiOjE3MzAzNzgzNjN9.NOuwXptJYDDITqejIX1eNzWSblAC2hl_D7LF9O5IbjA
+    const API_URL = 'https://syncshift.smartplace.ai/sync/timecards';
+    const token='eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpZCI6IjhkMzBkMWFiMWNmOTZmMjk4NDcyMjVjZWE3Yzc4NTY1NWIxMDUyOWNkYzU2NGY2MTNjOWE2ZGZlNjE1ZWUzY2EiLCJzaWduYXR1cmUiOiI4Mzk2Njg5NDZjNDRkNzJmYWM2ODNjODY5YzkxYzM3N2IwOTYzNTAxYTVmMDY4NTEwYjA5Mjc3MmNlYTllZWZlIiwiZXhwIjoxNzM4MTA4ODAwLCJpYXQiOjE3MzAzNzgzNjN9.NOuwXptJYDDITqejIX1eNzWSblAC2hl_D7LF9O5IbjA';
 
     const fetchEvents = async (userId) => {
 
